--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "^2.1.3",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
